<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvItemList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="#936FD9"
    >




    <LinearLayout
        android:id="@+id/llData"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/lista_de_pedidos"
            android:textSize="25dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            />

        <ImageView
            android:src="@drawable/pizza"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                android:layout_gravity="start"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/name"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/tvPizzaName"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="start"
                android:text="Comida"
                android:textSize="20sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:layout_marginStart="5dp"
                 android:layout_gravity="start"
                 android:text="@string/food_flavor"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
                 android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvItemFlavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_gravity="start"
                android:text="Sabor"
                android:textSize="20sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                android:layout_gravity="start"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_gravity="start"
                android:text="20.00"
                android:textSize="20sp"
                android:textStyle="italic"/>


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>